--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reminder-chatbot",
   "version": "1.0.0",
-  "description": "A Facebook Messenger Chatbot that uses Wit.AI. The chatbot allows you sent reminders",
+  "description": "A Facebook Messenger Chatbot that uses Wit.AI. The chatbot allows you set reminders",
   "scripts": {
     "start": "node server.js"
   },
