--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Md Nadim Ahmed",
   "license": "ISC",
   "dependencies": {
+    "agenda": "^0.8.1",
     "node-wit": "4.0.0",
     "request": "2.74.0",
     "restify": "4.1.1"
