can now save reminders on database

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "agenda": "^0.8.1",
+    "moment": "^2.18.1",
     "node-wit": "4.0.0",
     "request": "2.74.0",
     "restify": "4.1.1"
